--- a/error.html
+++ b/error.html
@@ -14,7 +14,7 @@
       <hr />
       <div class="Cont">
         <p>Ha habido un error al intentar iniciar sesión/registrarse.</p>
-        <p>Intentelo de nuevo.</p>
+        <p>Inténtelo de nuevo.</p>
         <img src="img/icons8-error-512.png">
       </div>
     </div>
